--- a/AngularTestWork/src/app/app.component.html
+++ b/AngularTestWork/src/app/app.component.html
@@ -5,7 +5,7 @@
 <main class="main">
   <div class="menu">
       <ul>
-          <li [routerLink]="['/masonry']" routerLinkActive="active" class="page" id="pl"><p>Плитка</p> </li>
+          <li [routerLink]="['/masonry']" routerLinkActive="active" class="page" ><p>Плитка</p> </li>
           <li [routerLink]="['/table']" routerLinkActive="active" class="page"><p>Таблица</p></li>
       </ul>
   </div>
