--- a/AngularTestWork/src/app/components/masonry/masonry.component.html
+++ b/AngularTestWork/src/app/components/masonry/masonry.component.html
@@ -1,15 +1,11 @@
+<div class="content ">
+    <div class="content_div" *ngFor="let emp of service.cats">
+        <img [src]="emp.img">
+        <div class="content_description ">
+            <p>{{emp.title}}</p>
+            <img class="change" [src]="get(emp.like)" (click)="change(emp.id)">
 
-
-    <div class="block-content ">
-        <div class="div_content" *ngFor="let emp of service.cats">
-            <img src={{emp.img}}>
-        <div class="block_description ">
-                 <p>{{emp.title}}</p>
-                 <img class="change" id="a" [src]="emp.like ? 'assets/images/like_full.svg' : 'assets/images/like.svg'" (click)="emp.like  = !emp.like ">
-                 
-             </div>
         </div>
-        
     </div>
 
-
+</div>
