--- a/AngularTestWork/src/app/components/masonry/masonry.component.scss
+++ b/AngularTestWork/src/app/components/masonry/masonry.component.scss
@@ -1,4 +1,4 @@
-.block-content {
+.content {
   padding: 60px 0 0;
   width: 95%;
   display: flex;
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
 }
 
-.div_content {
+.content_div {
   margin: 20px;
   position: relative;
   min-height: 375px;
@@ -15,17 +15,17 @@
   background-color: grey;
 }
 
-.div_content img {
+.content_div img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.div_content p {
+.content_div p {
   font-size: 30px;
   color: white;
 }
 
-.block_description {
+.content_description {
   position: absolute;
   bottom: 0;
   background: #a3a3a3;
@@ -35,7 +35,7 @@
   align-items: center;
   justify-content: space-around;
 }
-.block_description img {
+.content_description img {
   width: 45px;
   height: 45px;
   filter: invert(100%);
