--- a/AngularTestWork/src/styles.scss
+++ b/AngularTestWork/src/styles.scss
@@ -62,12 +62,12 @@ p {
   align-items: center;
 }
 
-.like {
+.content_like {
   display: flex;
   align-items: center;
 }
 
-.like img {
+.content_like img {
   width: 45px;
   height: 45px;
   filter: invert(100%);
