--- a/AngularTestWork/src/app/app.component.html
+++ b/AngularTestWork/src/app/app.component.html
@@ -1,23 +1,28 @@
+<app-alert></app-alert>
 <header class="header">
   <h1>Библиотека котиков</h1>
 </header>
-
-<main class="main">
-  <div class="menu">
+<div class="block">
+  <main class="main">
+    <div class="menu">
       <ul>
-          <li [routerLink]="['/masonry']" routerLinkActive="active" class="page" ><p>Плитка</p> </li>
-          <li [routerLink]="['/table']" routerLinkActive="active" class="page"><p>Таблица</p></li>
+        <li [routerLink]="['/masonry']" routerLinkActive="active" class="page">
+          <p>Плитка</p>
+        </li>
+        <li [routerLink]="['/table']" routerLinkActive="active" class="page">
+          <p>Таблица</p>
+        </li>
+        <li [routerLink]="['/menu']" routerLinkActive="active" class="page">
+          <p>Меню</p>
+        </li>
       </ul>
-  </div>
-  
+    </div>
 
-  <div class="wrapper">
-    <router-outlet></router-outlet>
-      </div>
-      
-
-</main>
-<footer class="footer">
-  <p>&copy; ExpertSender</p>
-</footer>
-
+    <div class="wrapper">
+      <router-outlet></router-outlet>
+    </div>
+  </main>
+  <footer class="footer">
+    <p>&copy; ExpertSender</p>
+  </footer>
+</div>
