--- a/AngularTestWork/src/app/project/pages/Masonry/masonry-cat/masonry-cat.component.scss
+++ b/AngularTestWork/src/app/project/pages/Masonry/masonry-cat/masonry-cat.component.scss
@@ -6,25 +6,26 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
-
 .content_div {
   margin: 20px;
   position: relative;
   min-height: 375px;
   width: 325px;
   background-color: grey;
-}
 
-.content_div img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.content_div p {
-  font-size: 30px;
-  color: white;
-}
+  img {
+    width: 100%;
+    height: 100%;
+    max-height: 370px;
+    overflow: hidden;
+    object-fit: cover;
+  }
 
+  p {
+    font-size: 30px;
+    color: white;
+  }
+}
 .content_description {
   position: absolute;
   bottom: 0;
@@ -34,9 +35,4 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-}
-.content_description img {
-  width: 45px;
-  height: 45px;
-  filter: invert(100%);
 }
