--- a/Channels/src/app/channels/channels.component.scss
+++ b/Channels/src/app/channels/channels.component.scss
@@ -2,19 +2,7 @@ p {
   font-weight: 400;
   font-size: 13px;
 }
-.block {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-}
 
-.title {
-  font-weight: 500;
-  font-size: 20px;
-}
 .channel {
   margin-right: 36px;
   display: flex;
@@ -29,4 +17,7 @@ p {
   &.active {
     background: #1dc296;
   }
+}
+.channel {
+  display: flex;
 }
