--- a/Channels/src/styles.scss
+++ b/Channels/src/styles.scss
@@ -15,6 +15,20 @@ body {
   height: 100vh;
   font-family: "SF Pro Display", Arial, Helvetica, sans-serif;
 }
+.block {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 20px;
+}
 
 .circle {
   background: white;
