--- a/Channels/src/app/channels/channels.component.scss
+++ b/Channels/src/app/channels/channels.component.scss
@@ -3,21 +3,29 @@ p {
   font-size: 13px;
 }
 
+input[type="checkbox"] {
+  display: block;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  -webkit-appearance: none;
+  outline: 0;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  &:not(:checked) {
+    background: #8b8f9e;
+  }
+  &:checked {
+    background: #1dc296;
+  }
+}
+
 .channel {
   margin-right: 36px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-.icon {
-  background-color: #8b8f9e;
-  width: 100%;
-  height: 100%;
-  &.active {
-    background: #1dc296;
-  }
-}
-.channel {
-  display: flex;
 }
