--- a/Channels/src/styles.scss
+++ b/Channels/src/styles.scss
@@ -17,12 +17,15 @@ body {
 }
 .block {
   display: flex;
-
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
+}
+form {
+  margin: 0;
+  padding: 0;
 }
 
 .title {
